--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
                         <i class="fas fa-user"></i>
                         <span class="ml-1">Login</span>
                     </a>
-                    <a href="#" class="text-gray-600 hover:text-blue-600 relative">
+                    <a href="#" class="text-gray-600 hover:text-blue-600">
                         <i class="fas fa-shopping-cart"></i>
                         <span class="ml-1">Cart</span>
-                        <span class="absolute -top-2 -right-2 bg-red-500 text-white rounded-full w-5 h-5 flex items-center justify-center text-xs">3</span>
                     </a>
                 </div>
             </div>
@@ -87,7 +86,12 @@
             <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 gap-6">
                 <!-- Product Card 1 -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition">
-                    <img src="/api/placeholder/400/300" alt="Product" class="w-full h-48 object-cover"/>
+                    <div class="p-4 bg-gray-100 text-center h-48 flex items-center justify-center">
+                        <div class="text-gray-600">
+                            <i class="fas fa-laptop text-5xl mb-2"></i>
+                            <p>Latest MacBook Pro</p>
+                        </div>
+                    </div>
                     <div class="p-4">
                         <h4 class="font-semibold mb-2">Latest MacBook Pro</h4>
                         <div class="flex items-center mb-2">
@@ -109,10 +113,14 @@
                     </div>
                 </div>
 
-                
                 <!-- Product Card 2 -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition">
-                    <img src="/api/placeholder/400/300" alt="Product" class="w-full h-48 object-cover"/>
+                    <div class="p-4 bg-gray-100 text-center h-48 flex items-center justify-center">
+                        <div class="text-gray-600">
+                            <i class="fas fa-mobile-alt text-5xl mb-2"></i>
+                            <p>iPhone 15 Pro</p>
+                        </div>
+                    </div>
                     <div class="p-4">
                         <h4 class="font-semibold mb-2">iPhone 15 Pro</h4>
                         <div class="flex items-center mb-2">
@@ -136,7 +144,12 @@
 
                 <!-- Product Card 3 -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition">
-                    <img src="/api/placeholder/400/300" alt="Product" class="w-full h-48 object-cover"/>
+                    <div class="p-4 bg-gray-100 text-center h-48 flex items-center justify-center">
+                        <div class="text-gray-600">
+                            <i class="fas fa-headphones text-5xl mb-2"></i>
+                            <p>Sony WH-1000XM5</p>
+                        </div>
+                    </div>
                     <div class="p-4">
                         <h4 class="font-semibold mb-2">Sony WH-1000XM5</h4>
                         <div class="flex items-center mb-2">
@@ -160,7 +173,12 @@
 
                 <!-- Product Card 4 -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition">
-                    <img src="/api/placeholder/400/300" alt="Product" class="w-full h-48 object-cover"/>
+                    <div class="p-4 bg-gray-100 text-center h-48 flex items-center justify-center">
+                        <div class="text-gray-600">
+                            <i class="fas fa-gamepad text-5xl mb-2"></i>
+                            <p>PS5 Console</p>
+                        </div>
+                    </div>
                     <div class="p-4">
                         <h4 class="font-semibold mb-2">PS5 Console</h4>
                         <div class="flex items-center mb-2">
@@ -237,6 +255,4 @@
                 <p>&copy; 2025 Kirin Innovations. All rights reserved.</p>
             </div>
         </div>
-    </footer>
-</body>
-</html>
+    </footer
