--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name='impact-site-verification' value='undefined'>
 </head>
 <body class="bg-gray-50">
+    Impact-Site-Verification: a7bf742f-41f7-431b-8b55-995e7c3ee20e
     <div>Impact-Site-Verification: a7bf742f-41f7-431b-8b55-995e7c3ee20e</div>
     <!-- Header -->
     <header class="bg-white shadow-md fixed w-full top-0 z-50">
