--- a/index.html
+++ b/index.html
@@ -3,257 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kirin Innovations - Your Tech Shopping Destination</title>
+    <meta name="description" content="Welcome to Kirin Innovations, your go-to platform for innovative mobile apps, language learning tools, and recipe management solutions to make life and study easier.">
+    <meta name="keywords" content="Kirin Innovations, mobile apps, language learning, recipes, productivity tools">
+    <meta name="author" content="Kirin Innovations">
+    <title>Kirin Innovations - Simplifying Life and Learning</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body class="bg-gray-50">
-    Impact-Site-Verification: a7bf742f-41f7-431b-8b55-995e7c3ee20e
-    <!-- Header -->
-    <header class="bg-white shadow-md fixed w-full top-0 z-50">
-        <nav class="container mx-auto px-4 py-3 flex items-center justify-between">
-            <div class="flex items-center space-x-8">
-                <h1 class="text-2xl font-bold text-blue-600">Kirin Innovations</h1>
-                <div class="hidden md:flex space-x-6">
-                    <a href="#" class="text-gray-600 hover:text-blue-600">Home</a>
-                    <a href="#" class="text-gray-600 hover:text-blue-600">Products</a>
-                    <a href="#" class="text-gray-600 hover:text-blue-600">Deals</a>
-                    <a href="#" class="text-gray-600 hover:text-blue-600">About</a>
-                </div>
-            </div>
-            <div class="flex items-center space-x-6">
-                <div class="relative">
-                    <input type="text" placeholder="Search products..." class="w-64 px-4 py-2 rounded-full border focus:outline-none focus:ring-2 focus:ring-blue-400">
-                    <button class="absolute right-3 top-2.5 text-gray-400">
-                        <i class="fas fa-search"></i>
-                    </button>
-                </div>
-                <div class="flex items-center space-x-4">
-                    <a href="#" class="text-gray-600 hover:text-blue-600">
-                        <i class="fas fa-user"></i>
-                        <span class="ml-1">Login</span>
-                    </a>
-                    <a href="#" class="text-gray-600 hover:text-blue-600">
-                        <i class="fas fa-shopping-cart"></i>
-                        <span class="ml-1">Cart</span>
-                    </a>
-                </div>
+    <!-- Header Section -->
+    <header class="bg-blue-600 text-white py-4 shadow-md">
+        <nav class="container mx-auto flex justify-between items-center">
+            <h1 class="text-3xl font-bold">Kirin Innovations</h1>
+            <div class="flex space-x-6">
+                <a href="#home" class="hover:underline">Home</a>
+                <a href="#features" class="hover:underline">Features</a>
+                <a href="#about" class="hover:underline">About Us</a>
+                <a href="#contact" class="hover:underline">Contact</a>
             </div>
         </nav>
     </header>
 
     <!-- Hero Section -->
-    <section class="mt-16 bg-gradient-to-r from-blue-500 to-purple-600 text-white py-20">
-        <div class="container mx-auto px-4">
-            <div class="max-w-2xl">
-                <h2 class="text-4xl font-bold mb-4">Discover Amazing Tech Deals</h2>
-                <p class="text-xl mb-8">Shop the latest gadgets and innovations at unbeatable prices.</p>
-                <button class="bg-white text-blue-600 px-8 py-3 rounded-full font-semibold hover:bg-blue-50 transition">
-                    Shop Now
-                </button>
-            </div>
-        </div>
+    <section id="home" class="bg-blue-100 py-20 text-center">
+        <h2 class="text-4xl font-bold text-blue-600">Empowering Your Digital Experience</h2>
+        <p class="text-lg text-gray-700 mt-4">Discover innovative solutions for learning, cooking, and productivity.</p>
+        <button class="mt-8 px-6 py-3 bg-blue-600 text-white rounded-full shadow-md hover:bg-blue-700">Get Started</button>
     </section>
 
-    <!-- Featured Categories -->
-    <section class="py-16 bg-white">
-        <div class="container mx-auto px-4">
-            <h3 class="text-2xl font-bold mb-8">Featured Categories</h3>
-            <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
-                <div class="bg-gray-50 p-6 rounded-lg text-center hover:shadow-lg transition">
-                    <i class="fas fa-laptop text-4xl text-blue-600 mb-4"></i>
-                    <h4 class="font-semibold">Laptops</h4>
+    <!-- Features Section -->
+    <section id="features" class="py-16 bg-gray-50">
+        <div class="container mx-auto">
+            <h2 class="text-3xl font-bold text-center text-blue-600 mb-12">Our Key Features</h2>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                <div class="bg-white shadow-lg p-6 rounded-lg">
+                    <h3 class="text-2xl font-bold mb-4">Mobile Apps</h3>
+                    <p class="text-gray-600">Experience user-friendly apps designed for efficiency and convenience.</p>
                 </div>
-                <div class="bg-gray-50 p-6 rounded-lg text-center hover:shadow-lg transition">
-                    <i class="fas fa-mobile-alt text-4xl text-blue-600 mb-4"></i>
-                    <h4 class="font-semibold">Smartphones</h4>
+                <div class="bg-white shadow-lg p-6 rounded-lg">
+                    <h3 class="text-2xl font-bold mb-4">Language Learning</h3>
+                    <p class="text-gray-600">Interactive tools to help you master new languages effectively.</p>
                 </div>
-                <div class="bg-gray-50 p-6 rounded-lg text-center hover:shadow-lg transition">
-                    <i class="fas fa-headphones text-4xl text-blue-600 mb-4"></i>
-                    <h4 class="font-semibold">Audio</h4>
-                </div>
-                <div class="bg-gray-50 p-6 rounded-lg text-center hover:shadow-lg transition">
-                    <i class="fas fa-gamepad text-4xl text-blue-600 mb-4"></i>
-                    <h4 class="font-semibold">Gaming</h4>
+                <div class="bg-white shadow-lg p-6 rounded-lg">
+                    <h3 class="text-2xl font-bold mb-4">Recipe Management</h3>
+                    <p class="text-gray-600">Organize and explore recipes effortlessly to simplify your cooking experience.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Featured Products -->
-    <section class="py-16 bg-gray-50">
-        <div class="container mx-auto px-4">
-            <h3 class="text-2xl font-bold mb-8">Featured Products</h3>
-            <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 gap-6">
-                <!-- Product Card 1 -->
-                <div class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition">
-                    <div class="p-4 bg-gray-100 text-center h-48 flex items-center justify-center">
-                        <div class="text-gray-600">
-                            <i class="fas fa-laptop text-5xl mb-2"></i>
-                            <p>Latest MacBook Pro</p>
-                        </div>
-                    </div>
-                    <div class="p-4">
-                        <h4 class="font-semibold mb-2">Latest MacBook Pro</h4>
-                        <div class="flex items-center mb-2">
-                            <div class="text-yellow-400">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star-half-alt"></i>
-                            </div>
-                            <span class="text-gray-500 ml-2">(128)</span>
-                        </div>
-                        <div class="flex items-center justify-between">
-                            <span class="text-xl font-bold text-blue-600">$1299.99</span>
-                            <button class="bg-blue-600 text-white px-4 py-2 rounded-full hover:bg-blue-700">
-                                Add to Cart
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Product Card 2 -->
-                <div class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition">
-                    <div class="p-4 bg-gray-100 text-center h-48 flex items-center justify-center">
-                        <div class="text-gray-600">
-                            <i class="fas fa-mobile-alt text-5xl mb-2"></i>
-                            <p>iPhone 15 Pro</p>
-                        </div>
-                    </div>
-                    <div class="p-4">
-                        <h4 class="font-semibold mb-2">iPhone 15 Pro</h4>
-                        <div class="flex items-center mb-2">
-                            <div class="text-yellow-400">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
-                            <span class="text-gray-500 ml-2">(256)</span>
-                        </div>
-                        <div class="flex items-center justify-between">
-                            <span class="text-xl font-bold text-blue-600">$999.99</span>
-                            <button class="bg-blue-600 text-white px-4 py-2 rounded-full hover:bg-blue-700">
-                                Add to Cart
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Product Card 3 -->
-                <div class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition">
-                    <div class="p-4 bg-gray-100 text-center h-48 flex items-center justify-center">
-                        <div class="text-gray-600">
-                            <i class="fas fa-headphones text-5xl mb-2"></i>
-                            <p>Sony WH-1000XM5</p>
-                        </div>
-                    </div>
-                    <div class="p-4">
-                        <h4 class="font-semibold mb-2">Sony WH-1000XM5</h4>
-                        <div class="flex items-center mb-2">
-                            <div class="text-yellow-400">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
-                            <span class="text-gray-500 ml-2">(189)</span>
-                        </div>
-                        <div class="flex items-center justify-between">
-                            <span class="text-xl font-bold text-blue-600">$349.99</span>
-                            <button class="bg-blue-600 text-white px-4 py-2 rounded-full hover:bg-blue-700">
-                                Add to Cart
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Product Card 4 -->
-                <div class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition">
-                    <div class="p-4 bg-gray-100 text-center h-48 flex items-center justify-center">
-                        <div class="text-gray-600">
-                            <i class="fas fa-gamepad text-5xl mb-2"></i>
-                            <p>PS5 Console</p>
-                        </div>
-                    </div>
-                    <div class="p-4">
-                        <h4 class="font-semibold mb-2">PS5 Console</h4>
-                        <div class="flex items-center mb-2">
-                            <div class="text-yellow-400">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star-half-alt"></i>
-                            </div>
-                            <span class="text-gray-500 ml-2">(421)</span>
-                        </div>
-                        <div class="flex items-center justify-between">
-                            <span class="text-xl font-bold text-blue-600">$499.99</span>
-                            <button class="bg-blue-600 text-white px-4 py-2 rounded-full hover:bg-blue-700">
-                                Add to Cart
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <!-- About Section -->
+    <section id="about" class="bg-blue-600 text-white py-16">
+        <div class="container mx-auto text-center">
+            <h2 class="text-3xl font-bold mb-6">About Kirin Innovations</h2>
+            <p class="text-lg">Kirin Innovations is dedicated to creating innovative mobile applications and digital solutions that make everyday life and learning easier. Our goal is to provide meaningful tools that help users learn, cook, and manage tasks more efficiently.</p>
         </div>
     </section>
 
-    <!-- Newsletter Section -->
-    <section class="bg-blue-600 text-white py-16">
-        <div class="container mx-auto px-4 text-center">
-            <h3 class="text-2xl font-bold mb-4">Stay Updated with Latest Deals</h3>
-            <p class="mb-8">Subscribe to our newsletter and never miss out on exclusive offers!</p>
-            <div class="max-w-md mx-auto flex">
-                <input type="email" placeholder="Enter your email" class="flex-1 px-4 py-3 rounded-l-lg text-gray-900">
-                <button class="bg-gray-900 px-6 py-3 rounded-r-lg hover:bg-gray-800">Subscribe</button>
-            </div>
+    <!-- Contact Section -->
+    <section id="contact" class="py-16 bg-gray-50">
+        <div class="container mx-auto text-center">
+            <h2 class="text-3xl font-bold text-blue-600 mb-6">Get in Touch</h2>
+            <p class="text-gray-600 mb-8">We'd love to hear from you! Reach out with any questions or feedback.</p>
+            <form class="max-w-md mx-auto">
+                <div class="mb-4">
+                    <input type="text" placeholder="Your Name" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
+                </div>
+                <div class="mb-4">
+                    <input type="email" placeholder="Your Email" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
+                </div>
+                <div class="mb-4">
+                    <textarea placeholder="Your Message" class="w-full px-4 py-2 border rounded-lg focus:outline-none"></textarea>
+                </div>
+                <button type="submit" class="bg-blue-600 text-white px-6 py-2 rounded-full hover:bg-blue-700">Submit</button>
+            </form>
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="bg-gray-900 text-white py-12">
-        <div class="container mx-auto px-4">
-            <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
-                <div>
-                    <h4 class="text-xl font-bold mb-4">Kirin Innovations</h4>
-                    <p class="text-gray-400">Your trusted source for the latest tech products and innovations.</p>
-                </div>
-                <div>
-                    <h5 class="font-semibold mb-4">Quick Links</h5>
-                    <ul class="space-y-2">
-                        <li><a href="#" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white">Contact</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white">Blog</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white">FAQs</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h5 class="font-semibold mb-4">Customer Service</h5>
-                    <ul class="space-y-2">
-                        <li><a href="#" class="text-gray-400 hover:text-white">Shipping Info</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white">Returns</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white">Order Status</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white">Payment Options</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h5 class="font-semibold mb-4">Connect With Us</h5>
-                    <div class="flex space-x-4">
-                        <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white"><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
-                <p>&copy; 2025 Kirin Innovations. All rights reserved.</p>
-            </div>
+    <!-- Footer Section -->
+    <footer class="bg-gray-800 text-white py-6">
+        <div class="container mx-auto text-center">
+            <p>&copy; 2025 Kirin Innovations. All Rights Reserved.</p>
         </div>
-    </footer
+    </footer>
+
+</body>
+</html>
