--- a/index.html
+++ b/index.html
@@ -3,88 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Welcome to Kirin Innovations, your go-to platform for innovative mobile apps, language learning tools, and recipe management solutions to make life and study easier.">
-    <meta name="keywords" content="Kirin Innovations, mobile apps, language learning, recipes, productivity tools">
-    <meta name="author" content="Kirin Innovations">
-    <title>Kirin Innovations - Simplifying Life and Learning</title>
+    <title>Kirin Innovations - Tech Shopping Destination</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
 </head>
 <body class="bg-gray-50">
-    <!-- Header Section -->
     <header class="bg-blue-600 text-white py-4 shadow-md">
-        <nav class="container mx-auto flex justify-between items-center">
+        <nav class="container mx-auto flex justify-between">
             <h1 class="text-3xl font-bold">Kirin Innovations</h1>
-            <div class="flex space-x-6">
-                <a href="#home" class="hover:underline">Home</a>
-                <a href="#features" class="hover:underline">Features</a>
-                <a href="#about" class="hover:underline">About Us</a>
-                <a href="#contact" class="hover:underline">Contact</a>
+            <div class="space-x-4">
+                <a href="index.html" class="hover:underline">Home</a>
+                <a href="features.html" class="hover:underline">Features</a>
+                <a href="about.html" class="hover:underline">About Us</a>
+                <a href="contact.html" class="hover:underline">Contact</a>
             </div>
         </nav>
     </header>
 
-    <!-- Hero Section -->
-    <section id="home" class="bg-blue-100 py-20 text-center">
-        <h2 class="text-4xl font-bold text-blue-600">Empowering Your Digital Experience</h2>
-        <p class="text-lg text-gray-700 mt-4">Discover innovative solutions for learning, cooking, and productivity.</p>
-        <button class="mt-8 px-6 py-3 bg-blue-600 text-white rounded-full shadow-md hover:bg-blue-700">Get Started</button>
-    </section>
+    <main class="container mx-auto py-10">
+        <h2 class="text-4xl font-bold text-blue-600 mb-6">Welcome to Kirin Innovations</h2>
+        <p class="text-gray-700">Your go-to destination for innovative solutions in tech shopping, services, and experiences.</p>
+    </main>
 
-    <!-- Features Section -->
-    <section id="features" class="py-16 bg-gray-50">
-        <div class="container mx-auto">
-            <h2 class="text-3xl font-bold text-center text-blue-600 mb-12">Our Key Features</h2>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                <div class="bg-white shadow-lg p-6 rounded-lg">
-                    <h3 class="text-2xl font-bold mb-4">Mobile Apps</h3>
-                    <p class="text-gray-600">Experience user-friendly apps designed for efficiency and convenience.</p>
-                </div>
-                <div class="bg-white shadow-lg p-6 rounded-lg">
-                    <h3 class="text-2xl font-bold mb-4">Language Learning</h3>
-                    <p class="text-gray-600">Interactive tools to help you master new languages effectively.</p>
-                </div>
-                <div class="bg-white shadow-lg p-6 rounded-lg">
-                    <h3 class="text-2xl font-bold mb-4">Recipe Management</h3>
-                    <p class="text-gray-600">Organize and explore recipes effortlessly to simplify your cooking experience.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- About Section -->
-    <section id="about" class="bg-blue-600 text-white py-16">
-        <div class="container mx-auto text-center">
-            <h2 class="text-3xl font-bold mb-6">About Kirin Innovations</h2>
-            <p class="text-lg">Kirin Innovations is dedicated to creating innovative mobile applications and digital solutions that make everyday life and learning easier. Our goal is to provide meaningful tools that help users learn, cook, and manage tasks more efficiently.</p>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="py-16 bg-gray-50">
-        <div class="container mx-auto text-center">
-            <h2 class="text-3xl font-bold text-blue-600 mb-6">Get in Touch</h2>
-            <p class="text-gray-600 mb-8">We'd love to hear from you! Reach out with any questions or feedback.</p>
-            <form class="max-w-md mx-auto">
-                <div class="mb-4">
-                    <input type="text" placeholder="Your Name" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
-                </div>
-                <div class="mb-4">
-                    <input type="email" placeholder="Your Email" class="w-full px-4 py-2 border rounded-lg focus:outline-none">
-                </div>
-                <div class="mb-4">
-                    <textarea placeholder="Your Message" class="w-full px-4 py-2 border rounded-lg focus:outline-none"></textarea>
-                </div>
-                <button type="submit" class="bg-blue-600 text-white px-6 py-2 rounded-full hover:bg-blue-700">Submit</button>
-            </form>
-        </div>
-    </section>
-
-    <!-- Footer Section -->
-    <footer class="bg-gray-800 text-white py-6">
-        <div class="container mx-auto text-center">
-            <p>&copy; 2025 Kirin Innovations. All Rights Reserved.</p>
-        </div>
+    <footer class="bg-gray-800 text-white py-6 text-center">
+        &copy; 2025 Kirin Innovations. All Rights Reserved.
     </footer>
-
 </body>
 </html>
