--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Kirin Innovations - Your Tech Shopping Destination</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <meta name="google-site-verification" content="HiGbRpWQkoNz7ak60phK2M2mFMVCtTa52lGoZF1udH8" />
 </head>
 <body class="bg-gray-50">
     <!-- Header -->
